Configure CI pipeline

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,9 @@ format = "black . && isort ."
 lint = "black --check . && isort --check . && mypy . && ruff check ."
 test = "pytest"
 
+[[tool.hatch.envs.ci.matrix]]
+python = ["3.8", "3.9", "3.10", "3.11", "3.12"]
+
 [tool.black]
 
 [tool.isort]
