--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ name = "scrapy-azure"
 dynamic = ["version"]
 description = "A Scrapy extension to integrate with Microsoft Azure services"
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 license = "MIT"
 keywords = []
 authors = [
@@ -26,7 +26,7 @@ dependencies = [
 source = "vcs"
 
 [tool.hatch.envs.default]
-python = "3.8"
+python = "3.9"
 dependencies = [
   "black==24.2.0",
   "isort==5.13.2",
@@ -42,7 +42,7 @@ lint = "black --check . && isort --check . && mypy . && ruff check ."
 test = "pytest"
 
 [[tool.hatch.envs.ci.matrix]]
-python = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]
+python = ["3.9", "3.10", "3.11", "3.12", "3.13"]
 
 [tool.black]
 
