--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,8 @@ jobs:
           3.11
           3.12
           3.13
+          pypy3.9
+          pypy3.10
     - name: Install hatch
       run: |
         pip install hatch
